remove PV AMIs from prerelease page

--- a/alt.fedoraproject.org/data/content/prerelease/index.html
+++ b/alt.fedoraproject.org/data/content/prerelease/index.html
@@ -663,7 +663,7 @@
                 </div>
             </div>
           </div>
-          <div class="white">
+<!--          <div class="white">
             <div class="col-md-1">
             <img src="/static/images/cloud.png" />
             </div>
@@ -736,7 +736,7 @@
                   </div>
                 </div>
             </div>
-          </div>
+          </div> -->
           <!-- end EC2 images Desktop -->
         </div>
       </div>
@@ -864,7 +864,7 @@
                 </div>
             </div>
           </div>
-          <div class="white">
+<!--          <div class="white">
             <div class="col-xs-3">
             <img src="/static/images/cloud.png" />
             </div>
@@ -933,7 +933,7 @@
                   </div>
                 </div>
             </div>
-          </div>
+          </div> -->
           <!-- end EC2 images Phone -->
       </div>
     </div>
@@ -1072,7 +1072,7 @@
                 </div>
           </div>
         </div>
-        <div class="white">
+<!--        <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/cloud.png" />
           </div>
@@ -1145,7 +1145,7 @@
                   </div>
                 </div>
           </div>
-        </div>
+        </div> -->
         <!-- end EC2 images Phone -->
       </div>
     </div>
