--- a/alt.fedoraproject.org/data/content/verify-prereleases.html
+++ b/alt.fedoraproject.org/data/content/verify-prereleases.html
@@ -133,6 +133,7 @@
             <pre class="command">$ gpg --verify-files *-CHECKSUM</pre>
             <p>${Markup(_('The CHECKSUM file should have a good signature from one of the following keys:'))}</p>
             <ul>
+                <li><code>9DB62FB1</code> - ${_('Fedora 28')}</li>
                 <li><code>F5282EE4</code> - ${_('Fedora 27')}</li>
                 <li><code>64DAB85D</code> - ${_('Fedora 26')}</li>
                 <li><code>3B921D09</code> - ${_('Fedora 26 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)')}</li>
