drop Beta Server network install

--- a/alt.fedoraproject.org/data/content/prerelease/index.html
+++ b/alt.fedoraproject.org/data/content/prerelease/index.html
@@ -59,7 +59,7 @@
         <p>${_('These are very small images you can use to install Fedora over the network.')}</p>
         </div>
         <div class="col-md-9">
-          <div class="white">
+<!--          <div class="white">
             <div class="col-md-1">
             <img src="/static/images/server.png" />
             </div>
@@ -72,7 +72,7 @@
             <div class="col-md-4">
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Server/x86_64/iso/Fedora-Server-netinst-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Server-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('Verify')}</a></p>
             </div>
-          </div>
+          </div> -->
           <div class="white">
             <div class="col-md-1">
             <img src="/static/images/workstation.png" />
