alt: update vagrant cloud images to mention vagrant
This helps distinguish them from the qcow/raw cloud
image downloads. Also shortened VirtualBox to VBox
and libvirt/KVM to libvirt because the text was getting
too long for narrow screens.

--- a/alt.fedoraproject.org/data/content/prerelease/index.html
+++ b/alt.fedoraproject.org/data/content/prerelease/index.html
@@ -565,7 +565,7 @@
             <img src="/static/images/cloud.png" />
             </div>
             <div class="col-md-4">
-            <h3>${_('VirtualBox image')}</h3>
+            <h3>${_('Vagrant VBox image')}</h3>
             </div>
             <div class="col-md-3">
             <p>${Markup(_('%sMB vbox')) % global_variables.iso_size['pre_VBvag_cloud']}</p>
@@ -579,7 +579,7 @@
             <img src="/static/images/cloud.png" />
             </div>
             <div class="col-md-4">
-            <h3>${_('libvirt/KVM image')}</h3>
+            <h3>${_('Vagrant libvirt image')}</h3>
             </div>
             <div class="col-md-3">
             <p>${Markup(_('%sMB libvirt')) % global_variables.iso_size['pre_libvag_cloud']}</p>
