group ARM verify page, fix buttons and fix Python Classroom section to make it also responsive

--- a/arm.fedoraproject.org/data/content/index.html
+++ b/arm.fedoraproject.org/data/content/index.html
@@ -446,7 +446,7 @@
             <img src="/static/images/python.png" />
             </div>
             <div class="col-lg-4">
-            <h3>${_('Fedora Python-Classroom')}</h3>
+            <h3>${_('Python-Classroom')}</h3>
             </div>
             <div class="col-lg-3">
             <p>${Markup(_('%sGB raw image')) % global_variables.iso_size['ARM_Python']}</p>
@@ -479,7 +479,7 @@
           <img src="/static/images/python.png" />
           </div>
           <div class="col-xs-9">
-          <h3>${_('Fedora Python-Classroom')}</h3>
+          <h3>${_('Python-Classroom')}</h3>
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Labs/armhfp/images/Fedora-Python-Classroom-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
           </div>
         </div>
@@ -506,7 +506,7 @@
           <img src="/static/images/python.png" />
           </div>
           <div class="col-sm-5">
-          <h3>${_('Fedora Python-Classroom')}</h3>
+          <h3>${_('Python-Classroom')}</h3>
           </div>
           <div class="col-sm-4">
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Labs/armhfp/images/Fedora-Python-Classroom-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
