--- a/arm.fedoraproject.org/data/content/verify.html
+++ b/arm.fedoraproject.org/data/content/verify.html
@@ -32,20 +32,29 @@
         </div>
     </div>
     <div class="row bottom-margin">
-        <div class="col-sm-6 col-xs-12">
-          <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Server!')}</a>
+        <div class="col-sm-4 col-xs-12 text-center">
+          <h4 class="uppercase top-margin">${_('Server')}</h4>
+          <div class="h-body text-center">
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Server!')}</a>
+          </div>
+          <div class="h-body text-center">
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Minimal!')}</a>
+          </div>
         </div>
-        <div class="col-sm-6 col-xs-12">
-          <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Minimal!')}</a>
+        <div class="col-sm-4 col-xs-12 text-center">
+          <h4 class="uppercase top-margin">${_('Desktop')}</h4>
+          <div class="h-body text-center">
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Workstation-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Workstation!')}</a>
+          </div>
+          <div class="h-body text-center">
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Spins!')}</a>
+          </div>
         </div>
-        <div class="col-sm-3 col-xs-12">
-          <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Workstation-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Workstation!')}</a>
-        </div>
-        <div class="col-sm-3 col-xs-12">
-          <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Spins!')}</a>
-        </div>
-        <div class="col-sm-3 col-xs-12">
-          <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Labs-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Labs!')}</a>
+        <div class="col-sm-4 col-xs-12 text-center">
+          <h4 class="uppercase top-margin">${_('Labs')}</h4>
+          <div class="h-body text-center">
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Labs-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Labs!')}</a>
+          </div>
         </div>
     </div>
 
