--- a/labs.fedoraproject.org/data/content/index.html
+++ b/labs.fedoraproject.org/data/content/index.html
@@ -51,7 +51,7 @@
   <!-- Labs Screenshots -->
   <header id="head" class="main-head">
   <!-- Desktop -->
-  	<div class="container hidden-xs">
+  	<div class="container hidden-xs hidden-sm">
       <div id="lab">
        <div class="row top-space high">
         <div class="col-md-5 col-md-offset-1 text-center fadescreen design">
@@ -76,25 +76,36 @@
           <span class="grey">${_('A collection and perfect show-case of the best games available in Fedora.')}</span></div>
         </div>
         <div class="col-md-5 text-center fadescreen">
-          <div class="spin-banner"><a href="/${lang}/python-classroom"><img class="screenshot-banner" src="${path}/static/images/python-classroom/python-classroom-banner.png" alt="Python Classroom banner" /></a></div>
-           <a href="/${lang}/python-classroom"><img class="screenshot" src="${path}/static/images/python-classroom/screenshot-python-classroom.jpg" alt="Python Classroom Screenshot" /></a>
-           <div class="screenshot-text bottom-border"><a href="/${lang}/python-classroom"><h3>${_('Teach Python with ease')}</h3></a>
-           <span class="grey">${_('A classroom lab for teaching the Python programming language to students')}</span></div>
+          <div class="spin-banner"><a href="/${lang}/jam"><img class="screenshot-banner" src="${path}/static/images/jam-banner.png" alt="Jam banner" /></a></div>
+          <a href="/${lang}/jam"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-jam.jpg" alt="Jam Screenshot" /></a>
+          <div class="screenshot-text bottom-border"><a href="/${lang}/jam"><h3>${_('Unleash your inner musician.')}</h3></a>
+          <span class="grey">${_('For audio enthusiasts and musicians who want to create, edit and produce audio and music on Linux.')}</span></div>
         </div>
        </div>
 
-       <div class="row top-margin bottom-space high">
+       <div class="row top-margin high">
         <div class="col-md-5 col-md-offset-1 text-center fadescreen">
-           <div class="spin-banner"><a href="/${lang}/robotics"><img class="screenshot-banner" src="${path}/static/images/robotics-suite-banner.png" alt="Robotics banner" /></a></div>
+          <div class="spin-banner"><a href="/${lang}/python-classroom"><img class="screenshot-banner" src="${path}/static/images/python-classroom/python-classroom-banner.png" alt="Python Classroom banner" /></a></div>
+          <a href="/${lang}/python-classroom"><img class="screenshot" src="${path}/static/images/python-classroom/screenshot-python-classroom.jpg" alt="Python Classroom Screenshot" /></a>
+          <div class="screenshot-text bottom-border"><a href="/${lang}/python-classroom"><h3>${_('Teach Python with ease')}</h3></a>
+          <span class="grey">${_('A classroom lab for teaching the Python programming language to students')}</span></div>
+        </div>
+        <div class="col-md-5 text-center fadescreen">
+          <div class="spin-banner"><a href="/${lang}/robotics"><img class="screenshot-banner" src="${path}/static/images/robotics-suite-banner.png" alt="Robotics banner" /></a></div>
           <a href="/${lang}/robotics"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-robotics.jpg" alt="Robotics Screenshot" /></a>
           <div class="screenshot-text bottom-border"><a href="/${lang}/robotics"><h3>${_('Dive into Robotics.')}</h3></a>
           <span class="grey">${_('A wide variety of free and open robotics software packages for beginners and experts in robotics.')}</span></div>
         </div>
-        <div class="col-md-5 text-center fadescreen">
+       </div>
+
+       <div class="row bottom-space top-margin high">
+        <div class="col-md-6 col-md-offset-3">
+         <div class="col-md-10 col-md-offset-1 text-center fadescreen">
           <div class="spin-banner"><a href="/${lang}/security"><img class="screenshot-banner" src="${path}/static/images/security-lab-banner.png" alt="Security Lab banner" /></a></div>
           <a href="/${lang}/security"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-security.jpg" alt="Security Lab Screenshot" /></a>
           <div class="screenshot-text bottom-border"><a href="/${lang}/security"><h3>${_('Thorough, safe and secure.')}</h3></a>
           <span class="grey">${_('A safe test environment to work on security auditing, forensics, system rescue and teaching security testing methodologies.')}</span></div>
+         </div>
         </div>
        </div>
 
@@ -102,7 +113,7 @@
 	  </div>
 
     <!-- Mobile and Tablets -->
-    <div class="container visible-xs">
+    <div class="container visible-xs visible-sm">
       <div class="row top-space">
         <div class="col-xs-12 text-center fadescreen">
           <div class="spin-banner"><a href="/${lang}/astronomy"><img class="screenshot-banner" src="${path}/static/images/astronomy-banner.png" alt="Astronomy banner" /></a></div>
@@ -125,6 +136,14 @@
           <a href="/${lang}/games"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-games.jpg" alt="Games Screenshot" /></a>
   	  	  <div class="screenshot-text bottom-border"><a href="/${lang}/games"><h3>${_('Play with Fedora Today!')}</h3></a>
           <span class="grey">${_('A collection and perfect show-case of the best games available in Fedora.')}</span></div>
+        </div>
+      </div>
+      <div class="row top-margin">
+        <div class="col-xs-12 text-center fadescreen">
+          <div class="spin-banner"><a href="/${lang}/jam"><img class="screenshot-banner" src="${path}/static/images/jam-banner.png" alt="Jam banner" /></a></div>
+          <a href="/${lang}/jam"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-jam.jpg" alt="Jam Screenshot" /></a>
+          <div class="screenshot-text bottom-border"><a href="/${lang}/jam"><h3>${_('Unleash your inner musician.')}</h3></a>
+          <span class="grey">${_('For audio enthusiasts and musicians who want to create, edit and produce audio and music on Linux.')}</span></div>
         </div>
       </div>
       <div class="row top-margin">
