--- a/labs.fedoraproject.org/data/content/astronomy/download/index.html
+++ b/labs.fedoraproject.org/data/content/astronomy/download/index.html
@@ -32,12 +32,13 @@
     </div>
     <div class="col-md-3 text-left col-md-offset-1">
           <h3>${_('Other Downloads')}</h3>
-          <h4>${_('Direct Downloads')}</h4>
+<!--          <h4>${_('Direct Downloads')}</h4>
           <ul>
               <li>
                   <p><a class="astronomy-download-splash" href="${global_variables.path['download_arch']}/${global_variables.release['curr_id']}/Labs/i386/iso/Fedora-Astronomy_KDE-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i686_Live_Astronomy']}</a></p>
               </li>
           </ul>
+-->
           <h4>${_('Older Releases')}</h4>
           <ul>
               <li>
