--- a/spins.fedoraproject.org/data/content/lxqt/download/index.html
+++ b/spins.fedoraproject.org/data/content/lxqt/download/index.html
@@ -32,12 +32,13 @@
     </div>
     <div class="col-md-3 text-left col-md-offset-1">
           <h3>${_('Other Downloads')}</h3>
-          <h4>${_('Direct Downloads')}</h4>
+<!--          <h4>${_('Direct Downloads')}</h4>
           <ul>
               <li>
                   <p><a class="lxqt-download-splash" href="${global_variables.path['download_arch']}/${global_variables.release['curr_id']}/Spins/i386/iso/Fedora-LXQt-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i686_Live_LXQt']}</a></p>
               </li>
           </ul>
+-->
           <h4>${Markup(_('ARM&lt;span class="sup"&gt;&reg;&lt;/span&gt; Technology'))}</h4>
           <ul>
             <li><a href="https://arm.fedoraproject.org/">arm.fedoraproject.org</a></li>
