drop python classroom from arm.fp.o

--- a/arm.fedoraproject.org/data/content/index.html
+++ b/arm.fedoraproject.org/data/content/index.html
@@ -61,7 +61,7 @@
         <p>${_('These images are geared towards ARM-based computers used as servers, typically in a headless environment.')}</p>
         </div>
         <div class="col-md-9">
-          <div class="white">
+<!--          <div class="white">
             <div class="col-md-1">
             <img src="/static/images/server.png" />
             </div>
@@ -75,6 +75,7 @@
             <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/armhfp/images/Fedora-Server-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
             </div>
           </div>
+        -->
           <div class="white">
             <div class="col-md-1">
             <img src="/static/images/minimal.png" />
@@ -108,7 +109,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="white">
+<!--        <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/server.png" />
           </div>
@@ -117,6 +118,7 @@
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/armhfp/images/Fedora-Server-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
           </div>
         </div>
+      -->
         <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/minimal.png" />
@@ -144,7 +146,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="white">
+<!--        <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/server.png" />
           </div>
@@ -155,6 +157,7 @@
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/armhfp/images/Fedora-Server-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
           </div>
         </div>
+      -->
         <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/minimal.png" />
@@ -428,7 +431,7 @@
     </div>
   </div>
 
-  <!-- ARM Labs -->
+  <!-- ARM Labs
   <div class="jumbotron main-head top-space visible-lg hidden-xs hidden-sm hidden-md">
     <div class="container using">
       <div class="row">
@@ -460,7 +463,7 @@
     </div>
   </div>
 
-  <!-- ARM Labs mobile phone -->
+  <!- ARM Labs mobile phone ->
   <div class="jumbotron main-head top-space visible-xs">
     <div class="container using">
       <div class="row">
@@ -487,7 +490,7 @@
     </div>
   </div>
 
-  <!-- ARM Labs mobile tablets -->
+  <!- ARM Labs mobile tablets ->
   <div class="jumbotron main-head top-space visible-sm-md hidden-xs hidden-lg">
     <div class="container using">
       <div class="row">
@@ -515,6 +518,7 @@
       </div>
     </div>
   </div>
+-->
 
   <!-- Feature: ARM -->
   <div class="jumbotron product-feature bluebox">
