--- a/arm.fedoraproject.org/data/content/verify.html
+++ b/arm.fedoraproject.org/data/content/verify.html
@@ -34,9 +34,10 @@
     <div class="row bottom-margin">
         <div class="col-sm-4 col-xs-12 text-center">
           <h4 class="uppercase top-margin">${_('Server')}</h4>
-          <div class="h-body text-center">
+<!--          <div class="h-body text-center">
             <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Server!')}</a>
           </div>
+-->
           <div class="h-body text-center">
             <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Minimal!')}</a>
           </div>
@@ -50,12 +51,13 @@
             <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Spins!')}</a>
           </div>
         </div>
-        <div class="col-sm-4 col-xs-12 text-center">
+<!--        <div class="col-sm-4 col-xs-12 text-center">
           <h4 class="uppercase top-margin">${_('Labs')}</h4>
           <div class="h-body text-center">
             <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Labs-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Labs!')}</a>
           </div>
         </div>
+-->
     </div>
 
     <div class="row bottom-space">
