drop all server images and verify links from alt.fp.o

--- a/alt.fedoraproject.org/data/content/alt/index.html
+++ b/alt.fedoraproject.org/data/content/alt/index.html
@@ -32,7 +32,7 @@
         <p>${Markup(_('These images are for use with AArch64 &ldquo;Server Base System Architecture&rdquo; (SBSA) compliant systems or Single Board Computers.'))}</p>
         </div>
         <div class="col-md-9">
-          <div class="white">
+<!--          <div class="white">
             <div class="col-md-1">
             <img src="/static/images/server.png" />
             </div>
@@ -60,6 +60,7 @@
             <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-netinst-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
             </div>
           </div>
+-->
           <div class="white">
             <div class="col-md-1">
             <img src="/static/images/cloud.png" />
@@ -135,7 +136,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="white">
+<!--        <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/server.png" />
           </div>
@@ -153,6 +154,7 @@
           <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-netinst-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
+-->
         <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/cloud.png" />
@@ -207,7 +209,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="white">
+<!--        <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/server.png" />
           </div>
@@ -229,6 +231,7 @@
           <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-netinst-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
+-->
         <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/cloud.png" />
@@ -324,7 +327,7 @@
         <p>${_('PPC64 images are for installation on IBM Power systems or OpenPOWER systems.')}</p>
         </div>
         <div class="col-md-9">
-          <div class="white">
+<!--          <div class="white">
             <div class="col-md-1">
             <img src="/static/images/server.png" />
             </div>
@@ -352,6 +355,7 @@
             <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64/iso/Fedora-Server-netinst-ppc64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
             </div>
           </div>
+-->
           <div class="white">
             <div class="col-md-1">
             <img src="/static/images/cloud.png" />
@@ -416,7 +420,7 @@
         <p>${_('PPC64LE images are for installation on IBM Power systems or OpenPOWER systems.')}</p>
         </div>
         <div class="col-md-9">
-          <div class="white">
+<!--          <div class="white">
             <div class="col-md-1">
             <img src="/static/images/server.png" />
             </div>
@@ -444,6 +448,7 @@
             <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64le/iso/Fedora-Server-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
             </div>
           </div>
+-->
           <div class="white">
             <div class="col-md-1">
             <img src="/static/images/cloud.png" />
@@ -519,7 +524,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="white">
+<!--        <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/server.png" />
           </div>
@@ -537,6 +542,7 @@
           <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64/iso/Fedora-Server-netinst-ppc64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
+-->
         <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/cloud.png" />
@@ -581,7 +587,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="white">
+<!--        <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/server.png" />
           </div>
@@ -599,6 +605,7 @@
           <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64le/iso/Fedora-Server-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
+-->
         <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/cloud.png" />
@@ -653,7 +660,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="white">
+<!--        <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/server.png" />
           </div>
@@ -675,6 +682,7 @@
           <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64/iso/Fedora-Server-netinst-ppc64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
+-->
         <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/cloud.png" />
@@ -727,7 +735,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="white">
+<!--        <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/server.png" />
           </div>
@@ -749,6 +757,7 @@
           <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64le/iso/Fedora-Server-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
+-->
         <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/cloud.png" />
@@ -830,7 +839,7 @@
   <div class="white-hr"></div>
   <!-- end PowerPC -->
 
-  <!-- s390x -->
+  <!-- s390x
     Desktop
   <div class="jumbotron main-head hidden-xs hidden-sm">
     <div class="container using">
@@ -863,7 +872,7 @@
     </div>
   </div>
 
-  <!-- Mobile phones -->
+  <!- Mobile phones ->
   <div class="jumbotron main-head visible-xs">
     <div class="container using">
       <div class="row">
@@ -890,7 +899,7 @@
     </div>
   </div>
 
-  <!-- Tablets -->
+  <!- Tablets ->
   <div class="jumbotron main-head visible-sm">
     <div class="container using">
       <div class="row">
@@ -919,7 +928,7 @@
     </div>
   </div>
 
-  <!-- Resources -->
+  <!- Resources ->
   <div class="jumbotron main-head">
     <div class="container">
       <div class="row">
@@ -951,7 +960,8 @@
   </div>
 
   <div class="white-hr"></div>
-  <!-- end s390x -->
+  <!- end s390x ->
+-->
 
 
 
