--- a/alt.fedoraproject.org/data/content/verify.html
+++ b/alt.fedoraproject.org/data/content/verify.html
@@ -37,7 +37,7 @@
                 <img src="${path}/static/images/logo-color-server.png" />
             </div>
             <h4 class="uppercase">${_('Server')}</h4>
-            <div class="h-body text-center">
+<!--            <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64')}</a>
             </div>
             <div class="h-body text-center">
@@ -49,6 +49,7 @@
             <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_s390x']}-s390x-CHECKSUM">${_('For s390x')}</a>
             </div>
+-->
         </div>
         <div class="col-sm-4 col-xs-12 highlight productitem">
             <div class="productitem-logo">
