--- a/getfedora.org/data/content/index.html
+++ b/getfedora.org/data/content/index.html
@@ -52,7 +52,7 @@
           <div class="row">
             <div class="col-xs-12 text-center index">
               <h3>
-                <a class="news" href="https://fedoramagazine.org/fedora-26-is-here/">${Markup(_('Fedora %(rel)s released! Get it now.')) % {'rel':global_variables.release['curr_id']}}</a>
+                <a class="news" href="https://fedoramagazine.org/announcing-fedora-${global_variables.release['curr_id']}/">${Markup(_('Fedora %(rel)s released! Get it now.')) % {'rel':global_variables.release['curr_id']}}</a>
               </h3>
             </div>
           </div>
