--- a/getfedora.org/data/content/verify.html
+++ b/getfedora.org/data/content/verify.html
@@ -50,7 +50,7 @@
             </div>
             <h4 class="uppercase">${_('Server')}</h4>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('For 64-bit images')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Server-${global_variables.release['curr_server_id']}-${global_variables.release['RC_server_gold']}-x86_64-CHECKSUM">${_('For 64-bit images')}</a>
             </div>
         </div>
         <div class="col-sm-4 col-xs-12 highlight productitem cloud">
