update image sizes for F27

--- a/arm.fedoraproject.org/data/content/index.html
+++ b/arm.fedoraproject.org/data/content/index.html
@@ -236,7 +236,7 @@
             <h3>${_('LXQt Desktop')}</h3>
             </div>
             <div class="col-lg-3">
-            <p>${Markup(_('%sMB raw image')) % global_variables.iso_size['ARM_LXQt']}</p>
+            <p>${Markup(_('%sGB raw image')) % global_variables.iso_size['ARM_LXQt']}</p>
             </div>
             <div class="col-lg-4">
             <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/armhfp/images/Fedora-LXQt-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
