getfedora: update for f27 atomic host
- update curr_atomic_id, next_atomic_id
- use curr_atomic_id instead of curr_cloud_AMI_id when looking up AMIs
- mention vagrant cloud rather than atlas

--- a/getfedora.org/data/content/atomic/download/index.html
+++ b/getfedora.org/data/content/atomic/download/index.html
@@ -209,7 +209,7 @@
         <div class="row">
             <div class="col-xs-12 top-margin">
               <h3>${_('Atomic Host Images for Vagrant')}</h3>
-                <p>${Markup(_('Vagrant Boxes for Fedora Atomic Host are available for the VirtualBox and Libvirt providers. You can bring up Fedora Atomic Host in a vagrant box by downloading the images from Fedora or using the vagrant tools to pull the images from &lt;a href="%s"&gt;HashiCorp\'s Atlas&lt;/a&gt;.') % ('https://atlas.hashicorp.com/fedora'))}</p>
+                <p>${Markup(_('Vagrant Boxes for Fedora Atomic Host are available for the VirtualBox and Libvirt providers. You can bring up Fedora Atomic Host in a vagrant box by downloading the images from Fedora or using the vagrant tools to pull the images from &lt;a href="%s"&gt;HashiCorp\'s Vagrant Cloud&lt;/a&gt;.') % ('https://app.vagrantup.com/fedora'))}</p>
           	  <a href="#" id="openstack-base-click" class="btn btn-success download-cloud" role="button">${_('View Vagrant Downloads')}</a>
 	          <div id="openstack-base-link" class="reveal" style="display: none;">
 	            <div class="row">
