use Server variable also in the main Server page

--- a/getfedora.org/data/content/server/index.html
+++ b/getfedora.org/data/content/server/index.html
@@ -35,7 +35,7 @@
      </div>
 		    <div class="col-md-8 liveusb">
           <blockquote>
-            <p>${Markup(_('&ldquo;The simplicity introduced with rolekit and cockpit have made server deployments a breeze. What took me a few days on other operating systems took less than an hour with Fedora %(rel)s Server. It just works.&rdquo;')) % {'rel':global_variables.release['curr_id']}}</p>
+            <p>${Markup(_('&ldquo;The simplicity introduced with rolekit and cockpit have made server deployments a breeze. What took me a few days on other operating systems took less than an hour with Fedora %(rel)s Server. It just works.&rdquo;')) % {'rel':global_variables.release['curr_server_id']}}</p>
             <footer><cite>Dan Mossor, ${_('Systems Engineer')}</cite></footer>
           </blockquote>
         </div>
