--- a/alt.fedoraproject.org/data/content/verify.html
+++ b/alt.fedoraproject.org/data/content/verify.html
@@ -32,11 +32,23 @@
         </div>
     </div>
     <div class="row bottom-space">
-        <div class="col-sm-4 col-xs-12 highlight productitem">
+        <div class="col-sm-3 col-xs-12 highlight productitem">
+            <div class="productitem-logo">
+                <img src="${path}/static/images/logo-color-workstation.png" />
+            </div>
+            <h4 class="uppercase">${_('Workstation')}</h4>
+            <div class="h-body text-center">
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Workstation-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64')}</a>
+            </div>
+        </div>
+        <div class="col-sm-3 col-xs-12 highlight productitem">
             <div class="productitem-logo">
                 <img src="${path}/static/images/logo-color-server.png" />
             </div>
             <h4 class="uppercase">${_('Server')}</h4>
+            <div class="h-body text-center">
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Spins-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('aarch64 Minimal')}</a>
+            </div>
 <!--            <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64')}</a>
             </div>
@@ -51,7 +63,7 @@
             </div>
 -->
         </div>
-        <div class="col-sm-4 col-xs-12 highlight productitem">
+        <div class="col-sm-3 col-xs-12 highlight productitem">
             <div class="productitem-logo">
                 <img src="${path}/static/images/logo-color-cloud.png" />
             </div>
@@ -78,7 +90,7 @@
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-CloudImages-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('For Cloud Base images')}</a>
             </div>
         </div>
-        <div class="col-sm-4 col-xs-12 highlight productitem cloud">
+        <div class="col-sm-3 col-xs-12 highlight productitem cloud">
             <div class="productitem-logo">
                 <img src="${path}/static/images/docker-big.png" />
             </div>
