--- a/alt.fedoraproject.org/data/content/alt/index.html
+++ b/alt.fedoraproject.org/data/content/alt/index.html
@@ -91,6 +91,20 @@
           </div>
           <div class="white">
             <div class="col-md-1">
+            <img src="/static/images/ev.png" />
+            </div>
+            <div class="col-md-4">
+            <h3>${_('Everything')}</h3>
+            </div>
+            <div class="col-md-3">
+            <p>${Markup(_('%sMB dvd iso')) % global_variables.iso_size['aarch64_ev']}</p>
+            </div>
+            <div class="col-md-4">
+            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Everything/aarch64/iso/Fedora-Everything-netinst-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/static/checksums/Fedora-Everything-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-aarch64-CHECKSUM">${_('Verify')}</a></p>
+            </div>
+          </div>
+          <div class="white">
+            <div class="col-md-1">
             <img src="/static/images/cloud.png" />
             </div>
             <div class="col-md-4">
@@ -203,6 +217,15 @@
         </div>
         <div class="white">
           <div class="col-xs-3">
+          <img src="/static/images/ev.png" />
+          </div>
+          <div class="col-xs-9">
+          <h3>${_('Everything')}</h3>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Everything/aarch64/iso/Fedora-Everything-netinst-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/static/checksums/Fedora-Everything-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-aarch64-CHECKSUM">${_('Verify')}</a></p>
+          </div>
+        </div>
+        <div class="white">
+          <div class="col-xs-3">
           <img src="/static/images/cloud.png" />
           </div>
           <div class="col-xs-9">
@@ -298,6 +321,17 @@
           </div>
           <div class="col-sm-4">
           <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Spins/aarch64/images/Fedora-Minimal-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.aarch64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          </div>
+        </div>
+        <div class="white">
+          <div class="col-sm-3">
+          <img src="/static/images/ev.png" />
+          </div>
+          <div class="col-sm-5">
+          <h3>${_('Everything')}</h3>
+          </div>
+          <div class="col-sm-4">
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Everything/aarch64/iso/Fedora-Everything-netinst-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/static/checksums/Fedora-Everything-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-aarch64-CHECKSUM">${_('Verify')}</a></p>
           </div>
         </div>
         <div class="white">
@@ -424,6 +458,20 @@
             </div>
           </div>
 -->
+		  <div class="white">
+            <div class="col-md-1">
+            <img src="/static/images/ev.png" />
+            </div>
+            <div class="col-md-4">
+            <h3>${_('Everything')}</h3>
+            </div>
+            <div class="col-md-3">
+            <p>${Markup(_('%sMB dvd iso')) % global_variables.iso_size['ppc64_ev']}</p>
+            </div>
+            <div class="col-md-4">
+            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Everything/ppc64/iso/Fedora-Everything-netinst-ppc64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/static/checksums/Fedora-Everything-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-ppc64-CHECKSUM">${_('Verify')}</a></p>
+            </div>
+          </div>
           <div class="white">
             <div class="col-md-1">
             <img src="/static/images/cloud.png" />
@@ -517,6 +565,20 @@
             </div>
           </div>
 -->
+          <div class="white">
+            <div class="col-md-1">
+            <img src="/static/images/ev.png" />
+            </div>
+            <div class="col-md-4">
+            <h3>${_('Everything')}</h3>
+            </div>
+            <div class="col-md-3">
+            <p>${Markup(_('%sMB dvd iso')) % global_variables.iso_size['ppc64le_ev']}</p>
+            </div>
+            <div class="col-md-4">
+            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Everything/ppc64le/iso/Fedora-Everything-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/static/checksums/Fedora-Everything-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-ppc64le-CHECKSUM">${_('Verify')}</a></p>
+            </div>
+          </div>
           <div class="white">
             <div class="col-md-1">
             <img src="/static/images/cloud.png" />
@@ -613,6 +675,15 @@
 -->
         <div class="white">
           <div class="col-xs-3">
+          <img src="/static/images/ev.png" />
+          </div>
+          <div class="col-xs-9">
+          <h3>${_('Everything')}</h3>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Everything/ppc64/iso/Fedora-Everything-netinst-ppc64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/static/checksums/Fedora-Everything-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-ppc64-CHECKSUM">${_('Verify')}</a></p>
+          </div>
+        </div>
+        <div class="white">
+          <div class="col-xs-3">
           <img src="/static/images/cloud.png" />
           </div>
           <div class="col-xs-9">
@@ -674,6 +745,15 @@
           </div>
         </div>
 -->
+        <div class="white">
+          <div class="col-xs-3">
+          <img src="/static/images/ev.png" />
+          </div>
+          <div class="col-xs-9">
+          <h3>${_('Everything')}</h3>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Everything/ppc64le/iso/Fedora-Everything-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/static/checksums/Fedora-Everything-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-ppc64le-CHECKSUM">${_('Verify')}</a></p>
+          </div>
+        </div>
         <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/cloud.png" />
@@ -753,6 +833,17 @@
 -->
         <div class="white">
           <div class="col-sm-3">
+          <img src="/static/images/ev.png" />
+          </div>
+          <div class="col-sm-5">
+          <h3>${_('Everything')}</h3>
+          </div>
+          <div class="col-sm-4">
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Everything/ppc64/iso/Fedora-Everything-netinst-ppc64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/static/checksums/Fedora-Everything-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-ppc64-CHECKSUM">${_('Verify')}</a></p>
+          </div>
+        </div>
+        <div class="white">
+          <div class="col-sm-3">
           <img src="/static/images/cloud.png" />
           </div>
           <div class="col-sm-5">
@@ -826,6 +917,17 @@
           </div>
         </div>
 -->
+        <div class="white">
+          <div class="col-sm-3">
+          <img src="/static/images/ev.png" />
+          </div>
+          <div class="col-sm-5">
+          <h3>${_('Everything')}</h3>
+          </div>
+          <div class="col-sm-4">
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Everything/ppc64le/iso/Fedora-Everything-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/static/checksums/Fedora-Everything-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-ppc64le-CHECKSUM">${_('Verify')}</a></p>
+          </div>
+        </div>
         <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/cloud.png" />
@@ -980,7 +1082,7 @@
           </div>
         </div>
       -->
-          <div class="white">
+        <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/ev.png" />
           </div>
